syntax = "proto3";

import "Yggdrash.proto";

option java_package = "io.yggdrash.proto";
option java_outer_classname = "NetProto";

service BlockChain {
    // Client to server messaging RPC
    rpc syncBlock (SyncLimit) returns (BlockList) {
    }
    rpc syncTransaction (SyncLimit) returns (TransactionList) {
    }

    // Client to server simple RPC
    rpc broadcastBlock (Block) returns (Empty) {
    }
    rpc broadcastTransaction (Transaction) returns (Empty) {
    }

    // Bidirectional streaming RPC
    rpc biSyncBlock (stream SyncLimit) returns (stream BlockList) {
    }
    rpc biSyncTx (stream SyncLimit) returns (stream TransactionList) {
    }
    rpc biBroadcastBlock (stream Block) returns (stream Empty) {
    }
    rpc biBroadcastTx (stream Transaction) returns (stream Empty) {
    }
    rpc biDirectTest (stream Tik) returns (stream Tik) {
    }
}

message Empty {
}

message SyncLimit {
    bytes branch = 1;
    uint64 offset = 2;
    uint32 limit = 3;
}

//For test
message Tik {
    uint32 seq = 1;
    string msg = 2;
}