syntax = "proto3";

import "Yggdrash.proto";
import "BlockChain.proto";

option java_package = "io.yggdrash.proto";
option java_outer_classname = "EbftProto";

message PingTime {
    int64 timestamp = 1;
}

message PongTime {
    int64 timestamp = 1;
}

message NodeList {
    repeated string nodeList = 1;
}

message EbftBlockList {
    repeated EbftBlock ebftBlockList = 1;
}

message ConsensusList {
    repeated string consensusList = 1;
}

message EbftBlock {
    Block block = 1;
    ConsensusList consensusList = 2;
}

message EbftStatus {
    EbftBlock lastConfirmedEbftBlock = 1;
    EbftBlockList unConfirmedEbftBlockList = 2;
    int64 timestamp = 3;
    bytes signature = 4;
}

message Offset {
    bytes chain = 1;
    int64 index = 2;
    int64 count = 3;
}

message Chain {
    bytes chain = 1;
}

service EbftService {
    rpc PingPongTime (PingTime) returns (PongTime) {
    }

    rpc getNodeStatus (Chain) returns (EbftStatus) {
    }

    rpc exchangeNodeStatus (EbftStatus) returns (EbftStatus) {
    }

    rpc broadcastEbftBlock (EbftBlock) returns (Empty) {
    }

    rpc getEbftBlockList (Offset) returns (EbftBlockList) {
    }

    rpc exchangeEbftBlockList (EbftBlockList) returns (EbftBlockList) {
    }
}